# Thesis

./: .gitignore  README.md
network/: .gitignore  Dockerfile.server  README.md  chatbot.py  console.py  model.py  requirements.gpu.txt  server.py  train.py  utils.py
network/embeddings/: ngram.py
network/rnn/: .gitignore  model.py  requirements.cpu.txt  server.py  sgucell.py  train.py
network/t2t/: chatbot.py  console.py  constants.py  generate_dataset.py  train.py
network/t2t/models/: extended_seq2seq.py
network/t2t/problems/: chatbot_problem.py
telegram_bot/: .gitignore
telegram_bot/NeuralBot/: Actors.fs  ActorsNames.fs  Api.fs  Bot.fs  Commands.fs  Data.fs  Dockerfile  Misc.fs  NeuralBot.fsproj  NeuralBot.sln  Program.fs  Types.fs
tools/mailru_data_converter/: .gitignore  CMakeLists.txt  build.bat  configure.bat
tools/mailru_data_converter/src/: main.c  process.c  process.h
tools/scripts/: .gitignore  README.md  telegram_crawler.py
tools/scripts/crawler/: Dockerfile  README.md  config.ini  copy_data.sh  telegram_crawler.py
tools/scripts/crawler_data_processor/: badwords.txt  common.py  mailru.py  processor.py  requirements.txt  telegram.py
tools/scripts/crawler_mailru_answers/: .dockerignore  Dockerfile  README.md  config.pkl  copy_data.sh  crawler.py
tools/scripts/fasttext_preparer/: preparer.py
